<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="48dp"
            android:paddingRight="48dp">

            <ImageView
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_ifttt_logo_white"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/ifttt_about_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/avenir_next_ltpro_demi"
                android:gravity="center"
                android:lineSpacingExtra="@dimen/ifttt_about_text_line_space"
                android:text="@string/ifttt_about_title"
                android:textAppearance="@style/AboutIfttt.Title"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/ifttt_about_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:drawablePadding="@dimen/ifttt_about_drawable_padding"
                android:drawableStart="@drawable/ic_ifttt_about_1"
                android:fontFamily="@font/avenir_next_ltpro_demi"
                android:lineSpacingExtra="@dimen/ifttt_about_text_line_space"
                android:text="@string/ifttt_about_1"
                android:textAppearance="@style/AboutIfttt.Description"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/ifttt_about_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:drawablePadding="@dimen/ifttt_about_drawable_padding"
                android:drawableStart="@drawable/ic_ifttt_about_2"
                android:fontFamily="@font/avenir_next_ltpro_demi"
                android:lineSpacingExtra="@dimen/ifttt_about_text_line_space"
                android:text="@string/ifttt_about_2"
                android:textAppearance="@style/AboutIfttt.Description"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/ifttt_about_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:drawablePadding="@dimen/ifttt_about_drawable_padding"
                android:drawableStart="@drawable/ic_ifttt_about_3"
                android:fontFamily="@font/avenir_next_ltpro_demi"
                android:lineSpacingExtra="@dimen/ifttt_about_text_line_space"
                android:text="@string/ifttt_about_3"
                android:textAppearance="@style/AboutIfttt.Description"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/ifttt_about_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:drawablePadding="@dimen/ifttt_about_drawable_padding"
                android:drawableStart="@drawable/ic_ifttt_about_4"
                android:fontFamily="@font/avenir_next_ltpro_demi"
                android:lineSpacingExtra="@dimen/ifttt_about_text_line_space"
                android:text="@string/ifttt_about_4"
                android:textAppearance="@style/AboutIfttt.Description"/>

            <TextView
                android:id="@+id/ifttt_manage_connection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ifttt_about_button_background"
                android:paddingBottom="8dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:layout_marginTop="32dp"
                android:textSize="18sp"
                android:text="@string/ifttt_manage_connection"
                android:fontFamily="@font/avenir_next_ltpro_bold"
                android:textColor="@android:color/white"/>

            <ImageView
                android:id="@+id/google_play_link"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:adjustViewBounds="true"
                android:src="@drawable/google_play_badge"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/term_and_privacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:alpha="0.5"
                android:fontFamily="@font/avenir_next_ltpro_demi"
                android:gravity="center"
                android:lineSpacingExtra="@dimen/ifttt_about_text_line_space"
                android:textColor="@android:color/white"
                android:textSize="12sp"/>

        </LinearLayout>

    </ScrollView>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@android:color/black"
        app:navigationIcon="@drawable/ic_close_black_24dp"/>

</FrameLayout>
